upd10: add image model
